@@ -710,10 +710,13 @@ static void run_script (const char *script) {
 }
 
 #include "_usage.h"
-#define getoptstring getoptstring_COMMON 
+#define getoptstring getoptstring_COMMON
 static struct option longopts[] = {
 	longopts_COMMON
 	{ NULL,             0, NULL, 0}
+};
+static const char * const longopts_help[] = {
+	longopts_help_COMMON
 };
 #include "_usage.c"
 
