@@ -487,6 +487,30 @@ static struct option longopts[] = {
 	longopts_COMMON
 	{ NULL,           0, NULL, 0}
 };
+static const char * const longopts_help[] = {
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	"",
+	longopts_help_COMMON
+};
 #include "_usage.c"
 
 int start_stop_daemon (int argc, char **argv)
